// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/badge/demo/basic.md correctly 1`] = `
<div>
  <span
    class="c7n-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="c7n-scroll-number c7n-badge-count"
      title="5"
    >
      <span
        class="c7n-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="c7n-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="c7n-scroll-number c7n-badge-count"
      title="0"
    >
      0
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/change.md correctly 1`] = `
<div>
  <div>
    <span
      class="c7n-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="c7n-scroll-number c7n-badge-count"
        title="5"
      >
        <span
          class="c7n-scroll-number-only"
          style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
        >
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class="current"
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
        </span>
      </sup>
    </span>
    <div
      class="c7n-btn-group"
    >
      <button
        class="c7n-btn c7n-btn-flat"
        type="button"
      >
        <i
          class="icon icon-minus"
        />
        <div
          class="c7n-ripple-wrapper"
        />
      </button>
      <button
        class="c7n-btn c7n-btn-flat"
        type="button"
      >
        <i
          class="icon icon-plus"
        />
        <div
          class="c7n-ripple-wrapper"
        />
      </button>
    </div>
  </div>
  <div
    style="margin-top:10px"
  >
    <span
      class="c7n-badge"
    >
      <a
        class="head-example"
        href="#"
      />
      <sup
        class="c7n-scroll-number c7n-badge-dot"
      />
    </span>
    <span
      checked=""
      class="c7n-switch c7n-switch-checked"
      tabindex="0"
    >
      <span
        class="c7n-switch-inner"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/badge/demo/dot.md correctly 1`] = `
<div>
  <span
    class="c7n-badge"
  >
    <i
      class="icon icon-notification"
    />
    <sup
      class="c7n-scroll-number c7n-badge-dot"
    />
  </span>
  <span
    class="c7n-badge"
  >
    <i
      class="icon icon-notification"
    />
  </span>
  <span
    class="c7n-badge"
  >
    <a
      href="#"
    >
      Link something
    </a>
    <sup
      class="c7n-scroll-number c7n-badge-dot"
    />
  </span>
</div>
`;

exports[`renders ./components/badge/demo/link.md correctly 1`] = `
<a
  href="#"
>
  <span
    class="c7n-badge"
  >
    <span
      class="head-example"
    />
    <sup
      class="c7n-scroll-number c7n-badge-count"
      title="5"
    >
      <span
        class="c7n-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
</a>
`;

exports[`renders ./components/badge/demo/no-wrapper.md correctly 1`] = `
<div>
  <span
    class="c7n-badge c7n-badge-not-a-wrapper"
  >
    <sup
      class="c7n-scroll-number c7n-badge-count c7n-badge-multiple-words"
      title="25"
    >
      <span
        class="c7n-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1200%);-webkit-transform:translateY(-1200%);transform:translateY(-1200%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class="current"
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="c7n-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1500%);-webkit-transform:translateY(-1500%);transform:translateY(-1500%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class="current"
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="c7n-badge c7n-badge-not-a-wrapper"
  >
    <sup
      class="c7n-scroll-number c7n-badge-count"
      style="background-color:#fff;color:#999;box-shadow:0 0 0 1px #d9d9d9 inset"
      title="4"
    >
      <span
        class="c7n-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1400%);-webkit-transform:translateY(-1400%);transform:translateY(-1400%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class="current"
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="c7n-badge c7n-badge-not-a-wrapper"
  >
    <sup
      class="c7n-scroll-number c7n-badge-count c7n-badge-multiple-words"
      style="background-color:#52c41a"
      title="109"
    >
      99+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/overflow.md correctly 1`] = `
<div>
  <span
    class="c7n-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="c7n-scroll-number c7n-badge-count c7n-badge-multiple-words"
      title="99"
    >
      <span
        class="c7n-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
      <span
        class="c7n-scroll-number-only"
        style="transition:none;-ms-transform:translateY(-1900%);-webkit-transform:translateY(-1900%);transform:translateY(-1900%)"
      >
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class="current"
        >
          9
        </p>
        <p
          class=""
        >
          0
        </p>
        <p
          class=""
        >
          1
        </p>
        <p
          class=""
        >
          2
        </p>
        <p
          class=""
        >
          3
        </p>
        <p
          class=""
        >
          4
        </p>
        <p
          class=""
        >
          5
        </p>
        <p
          class=""
        >
          6
        </p>
        <p
          class=""
        >
          7
        </p>
        <p
          class=""
        >
          8
        </p>
        <p
          class=""
        >
          9
        </p>
      </span>
    </sup>
  </span>
  <span
    class="c7n-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="c7n-scroll-number c7n-badge-count c7n-badge-multiple-words"
      title="100"
    >
      99+
    </sup>
  </span>
  <span
    class="c7n-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="c7n-scroll-number c7n-badge-count c7n-badge-multiple-words"
      title="99"
    >
      10+
    </sup>
  </span>
  <span
    class="c7n-badge"
  >
    <a
      class="head-example"
      href="#"
    />
    <sup
      class="c7n-scroll-number c7n-badge-count c7n-badge-multiple-words"
      title="1000"
    >
      999+
    </sup>
  </span>
</div>
`;

exports[`renders ./components/badge/demo/status.md correctly 1`] = `
<div>
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-success"
    />
    <span
      class="c7n-badge-status-text"
    />
  </span>
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-error"
    />
    <span
      class="c7n-badge-status-text"
    />
  </span>
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-default"
    />
    <span
      class="c7n-badge-status-text"
    />
  </span>
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-processing"
    />
    <span
      class="c7n-badge-status-text"
    />
  </span>
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-warning"
    />
    <span
      class="c7n-badge-status-text"
    />
  </span>
  <br />
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-success"
    />
    <span
      class="c7n-badge-status-text"
    >
      Success
    </span>
  </span>
  <br />
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-error"
    />
    <span
      class="c7n-badge-status-text"
    >
      Error
    </span>
  </span>
  <br />
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-default"
    />
    <span
      class="c7n-badge-status-text"
    >
      Default
    </span>
  </span>
  <br />
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-processing"
    />
    <span
      class="c7n-badge-status-text"
    >
      Processing
    </span>
  </span>
  <br />
  <span
    class="c7n-badge c7n-badge-status c7n-badge-not-a-wrapper"
  >
    <span
      class="c7n-badge-status-dot c7n-badge-status-warning"
    />
    <span
      class="c7n-badge-status-text"
    >
      Warning
    </span>
  </span>
</div>
`;
